# duck-keyboard

./: .gitignore  Cargo.toml  PKGBUILD  README.md  build_all.sh  build_packages.sh  duck-keyboard.install  duck-keyboard.service  install.sh  rpm_postinst.sh  rpm_preun.sh  uninstall.sh
packaging/: duck-keyboard.desktop  system-setup.sh
packaging/deb/: postinst  prerm
src/: main.rs
