[package]
name = "duck-keyboard"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
daemonize = "0.5.0"
rand = "0.10.0"
rdev = "0.5.3"
rodio = "0.22.2"
rust-embed = "8.11.0"
clap = { version = "4.5", features = ["derive"] }
libc = "0.2"

[package.metadata.deb]
maintainer = "Tu Nombre <tu@email.com>"
copyright = "2026, Tu Nombre"
extended-description = "A simple prank application that makes duck sounds."
assets = [
    ["target/release/duck-keyboard", "usr/bin/", "755"],
    ["duck-keyboard.service", "etc/systemd/system/", "644"]
]

[package.metadata.rpm]
package = "duck-keyboard"
